--- a/ESB/package.json
+++ b/ESB/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esb",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "app.js",
   "scripts": {
@@ -13,5 +13,8 @@
     "axios": "^0.20.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2"
   }
 }
