--- a/Repartidor/package.json
+++ b/Repartidor/package.json
@@ -14,5 +14,8 @@
     "axios": "^0.20.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2"
   }
 }
