--- a/Cliente/package.json
+++ b/Cliente/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "axios": "^0.20.0",
     "ejs": "^3.1.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "gulp-zip": "^5.0.2"
   },
   "devDependencies": {
     "gulp": "^4.0.2"
