--- a/ESB/package.json
+++ b/ESB/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "gulp": "^4.0.2",
-    "jest": "^26.4.2"
+    "jest": "^26.4.2",
+    "supertest": "^4.0.2"
   }
 }
