--- a/Repartidor/package.json
+++ b/Repartidor/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "gulp": "^4.0.2",
-    "jest": "^26.4.2"
+    "jest": "^26.4.2",
+    "supertest": "^4.0.2"
   }
 }
