--- a/Restaurante/package.json
+++ b/Restaurante/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "jest",
+    "coverage": "jest --coverage",
     "start": "node app.js"
   },
   "keywords": [],
