--- a/Restaurante/package.json
+++ b/Restaurante/package.json
@@ -4,9 +4,21 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "jest",
-    "coverage": "jest --coverage",
+    "sonar": "node sonar-project.js",
+    "test": "jest --coverage",
     "start": "node app.js"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "testResultsProcessor": "jest-sonar-reporter"
+  },
+  "jestSonar": {
+    "reportPath": "coverage",
+    "reportFile": "test-reporter.xml",
+    "indent": 4
   },
   "keywords": [],
   "author": "",
@@ -15,11 +27,13 @@
     "axios": "^0.20.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "gulp-zip": "^5.0.2"
+    "gulp-zip": "^5.0.2",
+    "sonarqube-scanner": "^2.7.0"
   },
   "devDependencies": {
     "gulp": "^4.0.2",
     "jest": "^26.4.2",
+    "jest-sonar-reporter": "^2.0.0",
     "supertest": "^4.0.2"
   }
 }
